# AoC_2023

./: Cargo.toml
src/: lib.rs
src/01_12/: part_1.rs  part_2.rs
src/02_12/: part_1.rs  part_2.rs
src/03_12/: part_1.rs  part_2.rs
src/04_12/: part_1.rs  part_2.rs
src/05_12/: part_1.rs  part_2.rs
src/06_12/: part_1.rs  part_2.rs
src/07_12/: part_1.rs  part_2.rs
src/08_12/: part_1.rs  part_2.rs
src/09_12/: part_1.rs  part_2.rs
src/10_12/: part_1.rs  part_2.rs
src/11_12/: part_1.rs  part_2.rs
src/12_12/: part_1.rs  part_2.rs  test.drawio
src/13_12/: part_1.rs  part_2.rs
src/14_12/: part_1.rs  part_2.rs
src/15_12/: part_1.rs  part_2.rs
src/16_12/: part_1.rs  part_2.rs
src/17_12/: diag.drawio  part_1.rs
src/text_file_reader/: mod.rs
