[package]
name = "AoC_2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "01_12_p1"
path = "src/01_12/part_1.rs"

[[bin]]
name = "01_12_p2"
path = "src/01_12/part_2.rs"

[[bin]]
name = "02_12_p1"
path = "src/02_12/part_1.rs"

[[bin]]
name = "02_12_p2"
path = "src/02_12/part_2.rs"

[[bin]]
name = "03_12_p1"
path = "src/03_12/part_1.rs"

[[bin]]
name = "03_12_p2"
path = "src/03_12/part_2.rs"

[dependencies]
itertools = "0.12.0"