[package]
name = "AoC_2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "01_12_p1"
path = "src/01_12/part_1.rs"

[[bin]]
name = "01_12_p2"
path = "src/01_12/part_2.rs"

[[bin]]
name = "02_12_p1"
path = "src/02_12/part_1.rs"

[[bin]]
name = "02_12_p2"
path = "src/02_12/part_2.rs"

[[bin]]
name = "03_12_p1"
path = "src/03_12/part_1.rs"

[[bin]]
name = "03_12_p2"
path = "src/03_12/part_2.rs"

[[bin]]
name = "04_12_p1"
path = "src/04_12/part_1.rs"

[[bin]]
name = "04_12_p2"
path = "src/04_12/part_2.rs"

[[bin]]
name = "05_12_p1"
path = "src/05_12/part_1.rs"

[[bin]]
name = "05_12_p2"
path = "src/05_12/part_2.rs"

[[bin]]
name = "06_12_p1"
path = "src/06_12/part_1.rs"

[[bin]]
name = "06_12_p2"
path = "src/06_12/part_2.rs"

[[bin]]
name = "07_12_p1"
path = "src/07_12/part_1.rs"

[[bin]]
name = "07_12_p2"
path = "src/07_12/part_2.rs"

[[bin]]
name = "08_12_p1"
path = "src/08_12/part_1.rs"

[[bin]]
name = "08_12_p2"
path = "src/08_12/part_2.rs"

[[bin]]
name = "09_12_p1"
path = "src/09_12/part_1.rs"

[[bin]]
name = "09_12_p2"
path = "src/09_12/part_2.rs"

[dependencies]
itertools = "0.12.0"
regex = "1.10.2"
num-integer = "0.1.43"